# Flask_REST

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  wsgi.py
pREST/: __init__.py  app.py  settings.py
pREST/domain/entities/: room.py
pREST/domain/interfaces/: repository.py
pREST/domain/request_objects/: room_list_request_object.py
pREST/domain/response_objects/: response_objects.py
pREST/domain/use_cases/: room_list_use_case.py
pREST/repository/: memrepo.py
pREST/rest/: room.py
pREST/serializers/: room_json_serializer.py
