[metadata]
name = pREST
version = 0.0.1
author = jamie
author_email = rmk1075@gmail.com
description = Flask REST api example
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmk1075/Flask_REST
project_urls =
    Bug Tracker = https://github.com/rmk1075/Flask_REST
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6
